[package]
name    = "wu"
version = "0.1.0"
authors = ["nilq <i.am@nilq.dk>"]
edition = "2018"
license = "MIT"
description = "A practical game and data language."

[dependencies]
colored     = "*"
rustyline   = "*"
backtrace   = "0.3"
toml        = "0.4"
git2        = "0.6"
dirs        = "2.0.2"
fs_extra    = "1.1.0"
